# DiffAndCopy2.0

./: .gitignore  CMakeLists.txt  _main.cpp  config.json  main.cpp  newconfig.json  util.cpp  util.h
hash/: CMakeLists.txt  sha256.h
hashlib/: CMakeLists.txt  sha1.cpp
json11/: CMakeLists.txt
